deploy_aks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugodoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pages
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pages
    spec:
      containers:
        - name: www
          image: ghcr.io/tomasdedic/ocpdoc/hugogen:sha-5ebe4986
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: gcr-pull
