deploy_aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugodoc
  namespace: blaster
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app.kubernetes.io/name: pages
