deploy_aks/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www-ingress
  namespace: blaster
  labels:
    project: www
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-external
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: www.sudlice.org
    http:
      paths:
      - backend:
          serviceName: hugodoc
          servicePort: http
        path: /
  tls:
  - hosts:
    - www.sudlice.org
    secretName: certmanager-www-tls
